--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -2,6 +2,10 @@
   border: 1px solid red;
 } */
 
+.completed {
+  color: rgb(157, 157, 157);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
